[tool.poetry]
name = "sneake-chat"
version = "0.1.0"
description = ""
authors = ["Mateus Soares"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
Flask-PyMongo = "^2.3.0"
flask-socketio = "^4.3.0"
eventlet = "^0.25.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
